CB-5875 put cb ee tables apart